Signal::Usr is handled with mach after 260623@main https://bugs.webkit.org/show_bug.cgi?id=256550 rdar://109117815

Reviewed by Justin Michaud.

260623@main made a change to move the handling of `JS_SHELL_WAIT_FOR_SIGUSR2_TO_EXIT` after
JSC options parsing, which enables signal handing using mach by default. `Signal::Usr` should
never be handled using mach, and when we attempt this we hit a release assertion in `toMachMask()`
causing JSC to crash when collecting vmmaps from a remote device. This patch fixes this by moving
where this signal handler is added back before mach exception handling is enabled.

* Source/JavaScriptCore/jsc.cpp:
(main):
(jscmain):

Canonical link: https://commits.webkit.org/263884@main